--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,13 @@
 .inline-block {
     display: inline-block;
 }
+.flexbox {
+    display: flex;
+}
 a, a:visited {
     text-decoration-line: none;
     color: black;
-}
+} 
 a:hover {
     color: grey;
 }
@@ -74,9 +77,28 @@ nav li {
     font-weight: normal; 
     margin-bottom: 0;
 }
-.flexbox {
-    display: flex;
+
+.rightlap {
+    width: 100%;
+    justify-content: center;
+    margin-top: -20px;
+    padding-left: 25px;
+    align-items: center;
+    overflow: hidden;
 }
+.rightlap .project-info {
+    width: 300px;
+    height: 300px;
+    background-color: #4F679E;
+    margin: 0 40px;
+    padding: 20px;
+    color: white;
+    cursor: pointer;
+}
+
+
+
+
 .triple {
     width: 100%;
     justify-content: center;
